<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRunningCalculator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculator_running"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@android:drawable/ic_menu_directions"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSwimmingCalculator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculator_swimming"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnRunningCalculator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@android:drawable/ic_menu_compass"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCyclingCalculator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculator_cycling"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnSwimmingCalculator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@android:drawable/ic_menu_rotate"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTrainingPlanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/training_planner"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnCyclingCalculator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@android:drawable/ic_menu_today"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>
